RESOLVED FIXED269814
REGRESSION (274442@main): [ MacOS wk2 ] media/media-source/media-source-seek-complete.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=269814
Summary REGRESSION (274442@main): [ MacOS wk2 ] media/media-source/media-source-seek-...
Jay Stfleur
Reported 2024-02-20 15:05:52 PST
Description: media/media-source/media-source-seek-complete.html Is a flaky timeout on wk2 config History: https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-source%2Fmedia-source-seek-complete.html Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/media/media-source/media-source-seek-complete-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/media/media-source/media-source-seek-complete-actual.txt @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + EXPECTED (source.readyState == 'closed') OK EVENT(sourceopen) @@ -9,6 +11,4 @@ RUN(source.duration = 11) RUN(source.endOfStream()) RUN(video.currentTime = 10) -EVENT(seeked) -END OF TEST
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-20 15:06:21 PST
Jay Stfleur
Comment 2 2024-02-20 15:22:04 PST
Reproducibility: run-webkit-tests --root media/media-source/media-source-seek-complete.html --iterations 5
Jean-Yves Avenard [:jya]
Comment 3 2024-02-22 21:57:13 PST
EWS
Comment 4 2024-02-23 02:46:59 PST
Committed 275231@main (53463ea1c60f): <https://commits.webkit.org/275231@main> Reviewed commits have been landed. Closing PR #24996 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.