Source/WebCore/Modules/mediasource/MediaSource.cpp
@@ -310,13 +310,10 @@ MediaTime MediaSource::duration() const
 
 MediaTime MediaSource::currentTime() const
 {
-    if (isClosed())
-        return MediaTime::zeroTime();
-
     if (m_pendingSeekTarget)
         return m_pendingSeekTarget->time;
 
-    return m_private->currentTime();
+    return m_private ? m_private->currentTime() : MediaTime::zeroTime();
 }
 
 PlatformTimeRanges MediaSource::buffered() const
